# XQWidgetComposer

./: .gitignore  CMakeLists.txt  README.md
include/: XQWidgetComposer.hpp
src/: XQWidgetComposer.cpp
test/: MainWindow.cpp  MainWindow.hpp  main.cpp
